[gd_scene load_steps=9 format=2]

[ext_resource path="res://common/shaders/fx/weapon_smoke_particles_material.tres" type="Material" id=1]
[ext_resource path="res://common/shaders/fx/weapon_fire_particles_material.tres" type="Material" id=4]
[ext_resource path="res://game/weapons/Weapon.gd" type="Script" id=5]
[ext_resource path="res://common/tex/circo_8.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=5267]

[sub_resource type="CanvasItemMaterial" id=5277]

[sub_resource type="Animation" id=5276]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5275]
resource_name = "shooting_motion"
length = 0.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, -1 ), Vector2( 0, 0 ), Vector2( -3, 1 ) ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 5 )

[node name="WeaponSprite" type="Sprite" parent="."]

[node name="FireParticles" type="Particles2D" parent="WeaponSprite"]
show_behind_parent = true
material = SubResource( 5267 )
position = Vector2( 32, 0 )
rotation = -3.14159
emitting = false
amount = 5
lifetime = 0.1
randomness = 1.0
process_material = ExtResource( 4 )
texture = ExtResource( 6 )

[node name="Polygon2D" type="Polygon2D" parent="WeaponSprite"]
modulate = Color( 0.239216, 0.239216, 0.239216, 1 )
polygon = PoolVector2Array( 32, -8, 0, -8, 0, -16, -24, -16, -24, 16, 0, 16, 0, 8, 32, 8, 32, 0 )

[node name="FireCoverParticles" type="Particles2D" parent="WeaponSprite"]
modulate = Color( 1, 1, 1, 0.427451 )
material = SubResource( 5267 )
position = Vector2( 32, 0 )
rotation = -3.14159
emitting = false
amount = 5
lifetime = 0.1
randomness = 1.0
process_material = ExtResource( 4 )
texture = ExtResource( 6 )

[node name="SmokeParticles" type="Particles2D" parent="WeaponSprite"]
material = SubResource( 5277 )
position = Vector2( 33, -1 )
emitting = false
amount = 20
lifetime = 2.0
randomness = 1.0
process_material = ExtResource( 1 )
texture = ExtResource( 6 )

[node name="ShootingPosition" type="Position2D" parent="WeaponSprite"]
position = Vector2( 64, 0 )
__meta__ = {
"_gizmo_extents_": 6.0
}

[node name="ReloadTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5276 )
anims/shooting_motion = SubResource( 5275 )

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
